fix: мелкие фиксы